--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     dateformat = "January 2, 2006"
 
+    favicon_32 = "/images/favicon_32.png"
+    favicon_16 = "/images/favicon_16.png"
+
     hideCredits = false
     hideCopyright = false
 
